# stock_exchange

./: CMakeLists.txt
data/: stocks.json  users.json
src/: main.cpp
src/api/: ApiServer.cpp  ApiServer.hpp
src/core/: ThreadSafeQueue.hpp
src/engine/: MatchingEngine.cpp  MatchingEngine.hpp
src/models/: Order.hpp  User.cpp  User.hpp
src/services/: PortfolioManager.cpp  PortfolioManager.hpp
src/valuation/: PortfolioValuation.cpp  PortfolioValuation.hpp
tests/: matching_engine_test.cpp  order_test.cpp  portfolio_manager_test.cpp  portfolio_valuation_test.cpp  queue_test.cpp  user_test.cpp
web/: app.js  index.html  portfolio.html  portfolio.js
